// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Range should render Multi-Range with correct DOM structure 1`] = `
<div
  class="rc-slider"
>
  <div
    class="rc-slider-rail"
  />
  <div
    class="rc-slider-track rc-slider-track-1"
    style="left:0%;width:0%"
  />
  <div
    class="rc-slider-track rc-slider-track-2"
    style="left:0%;width:0%"
  />
  <div
    class="rc-slider-track rc-slider-track-3"
    style="left:0%;width:0%"
  />
  <div
    class="rc-slider-step"
  />
  <div
    aria-disabled="false"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="rc-slider-handle rc-slider-handle-1"
    role="slider"
    style="left:0%"
    tabindex="0"
  />
  <div
    aria-disabled="false"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="rc-slider-handle rc-slider-handle-2"
    role="slider"
    style="left:0%"
    tabindex="0"
  />
  <div
    aria-disabled="false"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="rc-slider-handle rc-slider-handle-3"
    role="slider"
    style="left:0%"
    tabindex="0"
  />
  <div
    aria-disabled="false"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="rc-slider-handle rc-slider-handle-4"
    role="slider"
    style="left:0%"
    tabindex="0"
  />
  <div
    class="rc-slider-mark"
  />
</div>
`;

exports[`Range should render Range with correct DOM structure 1`] = `
<div
  class="rc-slider"
>
  <div
    class="rc-slider-rail"
  />
  <div
    class="rc-slider-track rc-slider-track-1"
    style="left:0%;width:0%"
  />
  <div
    class="rc-slider-step"
  />
  <div
    aria-disabled="false"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="rc-slider-handle rc-slider-handle-1"
    role="slider"
    style="left:0%"
    tabindex="0"
  />
  <div
    aria-disabled="false"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="rc-slider-handle rc-slider-handle-2"
    role="slider"
    style="left:0%"
    tabindex="0"
  />
  <div
    class="rc-slider-mark"
  />
</div>
`;
